--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AlienCrops</title>
+    <meta http-equiv="refresh" content="0; url=https://kcsfield.github.io/alien-crops-app/" />
+    <title>Alien Crops</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <p>If you are not redirected automatically, follow this <a href="https://kcsfield.github.io/alien-crops-app/">link</a>.</p>
   </body>
 </html>
+
